# kali-mcp

./: .gitignore  LICENSE  README.md  cursor-mcp.example.json  cursor-mcp.remote.example.json  pyproject.toml  requirements.txt
config/: kali-mcp.config.json  kali-mcp.generated.config.json  kali-mcp.schema.json
example-pentesting-fcapyf/pentesting-results/: README.md
example-pentesting-fcapyf/pentesting-results/findings/: F-001-rest-user-enumeration.json  F-002-xmlrpc-enabled.json  F-003-missing-security-headers.json  F-004-depicter-401-cve-candidate.json  F-005-version-disclosure.json  F-006-xmlrpc-no-rate-limit.json  F-007-wps-hide-login.json  F-008-readme-html-exposed.json
example-pentesting-fcapyf/pentesting-results/reports/: phase-02-inteligencia.md  phase-03-modelado-amenazas.md  phase-04-analisis-vulnerabilidades.md  phase-05-explotacion.md  phase-06-post-explotacion.md  phase-07-informe-final.md
example-prompts-fcapyf/: 00-system-prompt.md  01-generic-pentest-expert.md  02-fcapyf-monografia-context.md
example-prompts-fcapyf/scope/: engagement-scope.md
example-prompts-fcapyf/templates/: raw-output.meta.template.json
kali_mcp/: __init__.py  __main__.py  api_server.py  backend.py  builtin_tools.py  catalog.py  command_builder.py  config.py  config_writer.py  discover_cli.py  discovery.py  executor.py  introspection.py  remote_client.py  remote_sync.py  schema.py  server.py  tool_call_log.py  tool_registry.py
kali_mcp/api/: __init__.py  __main__.py
kali_mcp/discover/: __init__.py  __main__.py
scripts/: run_mcp_client.py
(+55 files in other folders)
